--- a/0x05-Node_JS_basic/package.json
+++ b/0x05-Node_JS_basic/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint --fix [0-9]*.js",
-    "check-lint": "./node_modules/.bin/eslint [0-9]*.js",
+    "lint": "./node_modules/.bin/eslint --fix [0-9]*.js full_server/*.js full_server/*/*.js",
+    "check-lint": "./node_modules/.bin/eslint [0-9]*.js full_server/*.js full_server/*/*.js",
     "test": "./node_modules/mocha/bin/mocha --require babel-register --exit",
     "dev": "nodemon --exec babel-node --presets babel-preset-env ./full_server/server.js ./database.csv"
   },
